# hermes

./: .gitignore  Eample_Data_Pipelines.drawio  LICENSE.md  README.md  instruments.py  mytestfile.hdf5  notes.txt  protobuffer_instructions.md  pyproject copy.toml  pyproject.toml  pyprojectold.toml  requirements.txt  setup.py  testdict.py  testsaveparams.hdf5
docker/: Dockerfile
examples/: rough_vision_of_pipelines.py  test.ipynb  vision_of_pipeline_organization.py
examples/EBSD/: EBSD_AL_runs.py  EBSD_DataDaemon.py  EBSD_batch_acquistion.py  Euler_to_quat_noise.py  Hermes_use_case_example.ipynb  Heteroscedastic_GPC.py
examples/SEM/: Grain size measurements.txt  Grain_size_example_v0_2.py  Grid_locations_177map.csv  SEM_grain_size_data_wrangle.py
examples/XRD/: Prophetic_XRD_notebook.ipynb  chess_scratch_paper.py  qm2_combi_wafer.py  qm2_combi_wafer_restart.py
examples/XRF_wafer/: CoCrAl_Wafer_XRF_Summary_for_SLAC.csv  Metadata_CoCrAl Wafer XRF Summary for SLAC.txt
examples/resageexamplenotebook/: 2D_challenges_data.dill  SAGE for SSP reduced 240314a.ipynb  __init__.py  data_1D_challenges.dill  data_1D_challenges_full.dill
hermes/: __init__.py  classes.py  distance.py  instruments.py  similarity.py
hermes/Base/: archive.py
hermes/EBSD_example/: Choose_window.py  EBSD_graph_cluster.py  Read_db.py  Train_Predict_Plot_GPC.py
hermes/Intrinsic_data_analyis/: __init__.py  clustering.py
hermes/SEM_example/: GP_train_predict_acquire.py
hermes/XRD_example/: Prophetic_XRD_notebook.ipynb
hermes/XRF_wafer_example/: XRF_wafer_AL.ipynb
hermes/acquire/: _acquire.py
hermes/archive/: __init__.py  _archive.py
hermes/base/: __init__.py
hermes/classification/: __init__.py  _classification.py  heteroscedastic_gpc.py
hermes/clustering/: __init__.py  _clustering.py  clustering.py
hermes/data_normalizing_example/: x-y-data-remap.ipynb
hermes/distance/: __init__.py  base.py  compute_register.py  distance.py  similarity.py
hermes/ida/: __init__.py
hermes/instruments/: .QM2_pyfai_integrate.py.swo  .QM2_pyfai_integrate.py.swp  PySpecClient.py  __init__.py  _instruments.py  instruments.py  lab6_17keV.poni
hermes/loopcontrols/: _initializers.py
hermes/pairwise_metrics/: __init__.py  pairwise_metrics.py
hermes/pipelines/: data.py
hermes/schemas/: __init__.py  clustering_schemas.py
hermes/similarity/: __init__.py  similarity.py
hermes/utils/: __init__.py  _utils.py  remap.py  utils.py
src/hermes/: __init__.py  testing_al.py
src/hermes/_base/: __init__.py  analysis.py
src/hermes/acquire/: __init__.py
src/hermes/acquisition/: _acquisition.py
src/hermes/archive/: __init__.py  _archive.py  sql.py
src/hermes/bailiwick/: __init__.py
src/hermes/base/: __init__.py  ds.py  pipelines.py
src/hermes/classification/: __init__.py  _classification.py  heteroscedastic_gpc.py  predict_saved.py
src/hermes/clustering/: RBPots.ipynb  __init__.py  _clustering.py  generate_protobuf.py  rbpots_pb2_grpc.py
src/hermes/clustering/RBPots/: Dockerfile  pyproject.toml
src/hermes/clustering/RBPots/src/: __init__.py  rbpots.py
src/hermes/clustering/community_discovery/: Dockerfile  pyproject.toml
src/hermes/clustering/community_discovery/protobuf/: host.py  rbpots.proto  rbpots_pb2.py  rbpots_pb2_grpc_local.py  server.py
src/hermes/clustering/community_discovery/src/community_discovery/: __init__.py  cdlib_.py
src/hermes/distance/: _distance.py
src/hermes/instruments/: CombiEXAFS.py  QM2_instrument.py  QM2_pyfai_integrate.py  __init__.py  _instruments.py
testing_docker/: Dockerfile  client.py  graph.proto  graph_pb2.py  graph_pb2_grpc.py  server.py
tests/: __t_pipeline.py  test_initial.py  test_nb.ipynb  test_pipeline.py
tests/resources/: CombiView_Format_GeSbTe_Composition.txt  GeSbTe_XRD_MetaStable_Background subtracted and with normalization.txt  XY_Coordinates_177.txt
(+31 files in other folders)
