[tool.poetry]
authors = [
  "Austin McDannald <austin.mcdannald@nist.gov>",
  "Zach Trautt <zachary.trautt@nist.gov>",
  "Camilo Velez <camilo.velezramirez@nist.gov>",
  "Brian DeCost <brian.decost@nist.gov>",
  "Gilad Kusne <aaron.kusne@nist.gov>",
  "Howie Joress <howie.joress@nist.gov>",
]
description = "Flexible materials modeling and lab automation"
name = "hermes"
packages = [{include = "hermes"}]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
grpcio = "^1.63.0"
matplotlib = "^3.9.0"
networkx = "^3.3"
numpy = "^1.26.4"
pandas = "^2.2.2"
pydantic = "^2.7.1"
python = "^3.10"
python-on-whales = "^0.71.0"
scikit-learn = "^1.4.2"
tensorflow = "^2.16.1"
typer = "^0.12.3"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
