[tool.poetry]
authors = ["Austin McDannald"]
description = ""
name = "community-discovery"
version = "0.1.0"

[tool.poetry.dependencies]
cdlib = "^0.3.0"
leidenalg = "^0.10.2"
networkx = "^3.3"
numpy = "^1.26.4"
python = "^3.10"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]
